--- a/src/main/resources/templates/cliente/listar.html
+++ b/src/main/resources/templates/cliente/listar.html
@@ -43,7 +43,13 @@
                         <td th:text="${cliente.profissao}"></td>
                         <td>
                             <a href="" class="btn btn-warning">Editar</a>
-                            <a href="" class="btn btn-danger">Excluir</a>
+                            <a 
+                                th:href="@{/cliente/{id}/excluir (id=${cliente.id})}" 
+                                class="btn btn-danger"
+                                onclick="return confirm('Tem certeza que deseja excluir o cliente?');"
+                            >
+                            Excluir
+                            </a>
                         </td>
                     </tr>
                 </tbody>
