--- a/src/main/resources/templates/cliente/listar.html
+++ b/src/main/resources/templates/cliente/listar.html
@@ -42,7 +42,12 @@
                         <td th:text="${cliente.dataNascimento}"></td>
                         <td th:text="${cliente.profissao}"></td>
                         <td>
-                            <a href="" class="btn btn-warning">Editar</a>
+                            <a 
+                                th:href="@{/cliente/{id}/editar (id=${cliente.id})}" 
+                                class="btn btn-warning"
+                            >
+                            Editar
+                            </a>
                             <a 
                                 th:href="@{/cliente/{id}/excluir (id=${cliente.id})}" 
                                 class="btn btn-danger"
@@ -59,7 +64,7 @@
 
     <div class="row">
         <div class="col-sm-12">
-            <a href="" class="btn btn-primary">Cadastrar novo Cliente</a>
+            <a th:href="@{/cliente/cadastrar}" class="btn btn-primary">Cadastrar novo Cliente</a>
         </div>
     </div>
 
