--- a/src/main/resources/templates/cliente/cadastrar.html
+++ b/src/main/resources/templates/cliente/cadastrar.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="profissao" class="form-label">Profissão</label>
-                    <input type="text" class="form-control" id="profissao" th:profissao="*{profissao}">
+                    <input type="text" class="form-control" id="profissao" th:field="*{profissao}">
                 </div>
                 
                 <button type="submit" class="btn btn-primary">Salvar</button>
