--- a/src/main/resources/templates/cliente/detalhar.html
+++ b/src/main/resources/templates/cliente/detalhar.html
@@ -16,7 +16,7 @@
     <main class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h1>Teste Sprint - Detalhes do Cliente</h1>
+                <h1>Teste Spring - Detalhes do Cliente</h1>
             </div>
         </div>
     </main>
