--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,7 +14,8 @@
     <main class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h1>Teste Sprint</h1>
+                <h1>Curso - Fundamentos Spring</h1>
+                <h2>Objetivo: CRUD de Clientes</h2>
             </div>
         </div>
     </main>
