adição de links

--- a/src/main/resources/templates/cliente/cadastrar.html
+++ b/src/main/resources/templates/cliente/cadastrar.html
@@ -36,6 +36,7 @@
                 </div>
                 
                 <button type="submit" class="btn btn-primary">Salvar</button>
+                <a th:href="@{/}">Voltar</a>
             </form>
         </div>
     </div>
