--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,7 +15,9 @@
         <div class="row">
             <div class="col-sm-12">
                 <h1>Curso - Fundamentos Spring</h1>
-                <h2>Objetivo: CRUD de Clientes</h2>
+                <br/>
+                <h3><a th:href="@{/cliente/}">Listar Clientes</a></h3>
+                <h3><a th:href="@{/cliente/cadastrar}">Cadastrar Cliente</a></h3>
             </div>
         </div>
     </main>
