--- a/src/main/resources/templates/cliente/listar.html
+++ b/src/main/resources/templates/cliente/listar.html
@@ -65,6 +65,7 @@
     <div class="row">
         <div class="col-sm-12">
             <a th:href="@{/cliente/cadastrar}" class="btn btn-primary">Cadastrar novo Cliente</a>
+            <a th:href="@{/}">Voltar</a>
         </div>
     </div>
 
